--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,22 +33,22 @@
                                 {{ end }}
                             {{ end }}
                         {{ else }}
-                            Posted by 
+                            Publié par
                             {{ if .Params.author }}
                                 {{ .Params.author }}
                             {{ else }}
                                     {{ .Site.Title }}
-                            {{ end }} 
-                            on 
-                            {{ .Date.Format "Monday, January 2, 2006" }}
+                            {{ end }}
+                            le
+                            {{ .Date.Format "2006-02-01"}}
                             {{ if .Site.Params.page_view_conter }}
                                 {{ partial "page_view_counter.html" . }}
                             {{ end }}
                             <!-- Don't show "Last Modified on" if update happened on the same day. -->
                             {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02" .Lastmod) (dateFormat "2006-01-02" .Date)))) }}
-                            <br>Last Modified on {{ dateFormat "Monday, January 2, 2006" .Params.LastMod }}
+                            <br>Last Modified on {{ dateFormat "2006-01-02" .Params.LastMod }}
                             {{ end }}
-                        {{ end }}    
+                        {{ end }}
                     </span>
                 </div>
             </div>
@@ -88,21 +88,20 @@
                     {{ if .PrevInSection }}
                     <li class="previous">
                         <a href="{{ .PrevInSection.URL }}" data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title}}">&larr;
-                            Previous Post</a>
+                            Précédent</a>
                     </li>
                     {{ end }}
                     {{ if .NextInSection }}
                     <li class="next">
-                        <a href="{{ .NextInSection.URL }}" data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title}}">Next
-                            Post &rarr;</a>
+                        <a href="{{ .NextInSection.URL }}" data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title}}">Suivant &rarr;</a>
                     </li>
                     {{ end }}
                 </ul>
                 {{ partial "comments.html" . }}
             </div>
 
-            <!-- Side Catalog Container -->
-            {{ if not (eq (.Param "showtoc") false) }}
+            <!-- Side Catalog Container
+          <!--  {{ if not (eq (.Param "showtoc") false) }}
             <div class="
                 col-lg-2 col-lg-offset-0
                 visible-lg-block
@@ -116,7 +115,7 @@
                     <ul class="catalog-body"></ul>
                 </div>
             </div>
-            {{ end }}
+            {{ end }}-->
 
             <!-- Sidebar Container -->
             <div class="
@@ -128,7 +127,7 @@
                 {{ if .Site.Params.featured_tags }}
                 <section>
                     <hr class="hidden-sm hidden-xs">
-                    <h5><a href="/tags/">FEATURED TAGS</a></h5>
+                    <h5><a href="/tags/">Mots clés populaires</a></h5>
                     <div class="tags">
                         {{ $featured_condition_size := .Site.Params.featured_condition_size }}
                         {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
