--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -26,7 +26,7 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="{{ "/" | relLangURL }}">Home</a>
+                        <a href="{{ "/" | relLangURL }}">Accueil</a>
                     </li>
                     {{ if not .Site.Params.omit_categories }}
                         {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
@@ -35,7 +35,7 @@
                         </li>
                         {{ end }}
                     {{ end }}
-                    
+
 		    {{ range .Site.Params.addtional_menus }}
                         <li><a href="{{.href | relLangURL}}">{{.title}}</a></li>
                     {{ end }}
