--- a/layouts/partials/reward.html
+++ b/layouts/partials/reward.html
@@ -1,11 +1,11 @@
 
-<div class="entry-shang text-center">
+<!-- <div class="entry-shang text-center">
     {{ if .Site.Params.reward_guide }}
 	    <p> 「{{ .Site.Params.reward_guide }}」</p>
 	{{ else }}
 	    <p>「真诚赞赏，手留余香」</p>
 	{{ end }}
-	<button class="zs show-zs btn btn-bred">赞赏支持</button>
+	<button class="zs show-zs btn btn-bred">赞赏支持</button> -->
 </div>
 <div class="zs-modal-bg"></div>
 <div class="zs-modal-box">
@@ -17,7 +17,7 @@
 		{{ else }}
 	        <p class="tip"><i></i><span>真诚赞赏，手留余香</span></p>
 		{{ end }}
- 
+
 	</div>
 	<div class="zs-modal-body">
 		<div class="zs-modal-btns">
